css/layout.css
/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}

body { width: 640px; margin: 0 auto; }
header { width: 100%; height: 80px; }
h1 { padding: 10px 0; float: left; }
button { cursor: pointer; }
header h1 + p { float: left; margin: 30px 0 0 12px; }
header p:last-child { float: right; margin-top: 30px; }
header p:last-child span { margin-left: 10px; }
h2 { text-align: center; margin-bottom: 10px; font-size: 1.5em; }
h3 { text-align: center; margin-bottom: 6px; font-size: 1.1em; }
dl dt { line-height: 1.2em; }
p { margin-bottom: 1em; }
form input[type="text"] { padding-left: 4px; }
header form { padding-left: 375px; padding-top: 24px; }
header form fieldset { float: left; }
header form input[type="text"] { margin-right: 8px; height: 18px; }
header form button { float: left; width: 66px; height: 24px; }
#player { width: 100%; height: 390px; }
.now-playing { padding: 20px 0 0; }
.video-selection { margin: 20px 0; overflow: hidden; }
.video-selection .vote-timer { text-align: center; margin-bottom: 4px; }
.video-selection table { font-size: 1.2em; width: 100%; border-collapse: separate; }
.video-selection table tr td { padding: 8px 6px; vertical-align: middle; }
.video-selection table tr td:first-child { width: 12px; }
.video-selection table tr td:first-child + td { width: 32px; text-align: right; padding-left: 0; }
.video-selection table tr td:first-child + td + td { position: relative; }
.video-selection table tr td:first-child + td + td div { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
.video-selection table tr td:first-child + td + td div i { float: right; margin-left: 12px; font-size: 1.7em; margin-top: 3px;
    color: rgba(222, 255, 124, 0.3); }
.video-selection table tr td:hover { cursor: pointer; }
.video-selection table tr td.control { text-align: center; width: 10px; }
.video-selection table tr td.control a { text-decoration: none; font-size: 0.8em; }
.video-selection table tr td.control a i { top: -2px; position: relative; }
.video-selection table tr td .bounty { font-size: 1.1em; float: right; margin: 7px 12px 0 16px; }
.dj { margin: 16px; text-align: center; }

.event-log ul { width: 600px; margin: 0 20px 12px; }
.event-log ul li { position: relative; margin-bottom: 2px; }
.event-log ul li span { padding: 2px 0; line-height: 1.2em; }
.event-log ul li span:first-child { width: 56px; padding-right: 12px; }

.listeners { text-align: center; margin-bottom: 8px; }
.listeners h3 { margin-bottom: 0; }
.listener { padding: 4px 6px; display: inline-block; font-size: 0.9em; position: relative; }
.listener i { font-size: 1.5em; top: 2px; position: relative; margin-right: 3px; }
.listener .volume { width: 72px; margin: 5px auto 4px; height: 4px; padding: 1px; }
.listener .volume div { height: 4px; }
.message { cursor: pointer; }
p.message { text-align: center; margin-bottom: 4px; }
.message i { margin-right: 10px; }

.control-buttons { text-align: center; margin: 16px 0; }
.control-buttons button { display: inline-block; margin: 0 4px; }
.control-buttons button.selected { }
.control-buttons button:focus { outline-width: 0; }
.control-panel { margin: 16px 32px 32px; }
.control-panel h2, .control-panel legend { text-align: center; margin-bottom: 10px; font-size: 1.5em; }

.field { height: 32px; margin-bottom: 6px; clear: both; }
.field label { display: block; float: left; width: 120px; padding: 3px 10px 0 0; text-align: right; }
.field input { float: left; }

.add-bounty, .title-gamble { text-align: center; }
.add-bounty input, .title-gamble .field:first-of-type input { text-align: right; }
.title-gamble .field:first-of-type, .add-bounty .field:first-of-type { height: 56px; }
.title-gamble .field:last-of-type input { text-align: center; }
.title-gamble .field label { width: 240px; }
.title-gamble form p { margin-bottom: 0.5em; }
.title-gamble slider, .add-bounty slider { width: 300px; }
.add-bounty slider { top: -6px; }
.add-bounty select { float: left; width: 340px; margin-bottom: 12px; }
.add-bounty .hint, .title-gamble .hint { float: left; }

.field-large { height: 90px; }
.add-video textarea { width: 349px; height: 64px; resize: none; }
.add-video textarea ~ span { margin-left: 130px !important; }
.field .valid, .field .invalid, .field .hint { margin-left: 8px; line-height: 20px; }
.field .valid, .field .invalid { font-weight: bold; }
.add-video form button { float: left; margin-left: 130px; }
.add-video input[type="checkbox"] { margin-left: 10px; margin-top: 4px; float: left; }
.add-video input[type="checkbox"] + label { top: 3px; position: relative; }

.curator { margin-left: 8px; margin-right: 0; }
.curator p { text-align: center; }
.curator button { display: block; margin: 6px auto; }
.curator ul { margin-bottom: 16px; }
.curator ul li { display: block; margin: 18px 0 4px; position: relative; }
.curator ul li button.close { font-size: 14px; position: absolute; padding: 4px 6px 4px 7px; margin-top: 6px; }
.curator ul li h3 { font-size: 14px; padding-left: 36px; text-align: left; }
.curator ul li label { display: inline-block; margin: 2px 6px 2px 20px; }
.curator ul li label:first-of-type { margin-left: 36px; }

.avatar-shop p { text-align: center; }
.avatar-shop > div > div { width: 192px; height: 22px; float: left; cursor: pointer; }
.avatar-shop > div > div > i { display: inline-block; width: 30px; font-size: 1.1em; text-align: center; }
.avatar-shop .price { display: inline-block; width: 40px; text-align: right; }

.changelog table tr td { padding: 4px 0; }
.changelog table tr td:first-child { width: 110px; }

.mumble p { text-align: center; }
.mumble > ul > li { padding: 4px; }
.mumble > ul > li h3 { float: left; margin-right: 40px; font-size: 1.2em; }
.mumble ul li ul { float: left; margin-top: 3px; }
.mumble ul li ul li { float: left; padding-right: 32px; }

[ng\:cloak], [ng-cloak], .ng-cloak { display: none !important; }

.animate-selection { opacity: 1; max-height: 318px; }

.animate-selection.ng-hide-add.ng-hide-add-active {
    -webkit-transition: all 1s cubic-bezier(0.435, 0.360, 0.730, -0.315);
    transition: all 1s cubic-bezier(0.435, 0.360, 0.730, -0.315);
    -webkit-transition-timing-function: cubic-bezier(0.435, 0.360, 0.730, -0.315);
    transition-timing-function: cubic-bezier(0.435, 0.360, 0.730, -0.315);
}

.animate-selection.ng-hide-remove.ng-hide-remove-active {
    -webkit-transition: all 0.5s cubic-bezier(0.310, 1.275, 0.610, 0.590);
    transition: all 0.5s cubic-bezier(0.310, 1.275, 0.610, 0.590);
    -webkit-transition-timing-function: cubic-bezier(0.310, 1.275, 0.610, 0.590);
    transition-timing-function: cubic-bezier(0.310, 1.275, 0.610, 0.590);
}

.animate-selection.ng-hide { opacity: 0; max-height: 0; }

.animate-repeat.ng-enter {
    -webkit-transition: all 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940);
    transition: all 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940);
    -webkit-transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940);
    transition-timing-function: cubic-bezier(0.250, 0.460, 0.450, 0.940);
}

.animate-repeat.ng-leave {
    -webkit-transition: all 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530);
    transition: all 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530);
    -webkit-transition-timing-function: cubic-bezier(0.550, 0.085, 0.680, 0.530);
    transition-timing-function: cubic-bezier(0.550, 0.085, 0.680, 0.530);
}

.animate-repeat.ng-leave.ng-leave-active,
.animate-repeat.ng-enter {
    opacity:0; top: -10px; max-height: 0;
}

.animate-repeat.ng-leave,
.animate-repeat.ng-enter.ng-enter-active {
    opacity:1; top: 0; max-height: 20px;
}

